fix: update table background color and adjust overflow property for improved styling

--- a/DeviceInvy/static/css/device.css
+++ b/DeviceInvy/static/css/device.css
@@ -33,9 +33,9 @@ table {
   width: 100%;
   border-collapse: collapse;
   margin-top: 20px;
-  background-color: white;
+  background-color: #ccc;
   border-radius: 10px;
-  overflow: hidden;
+  /* overflow: hidden; */
   border: 2px solid black;
 }
 
